@@ -130,19 +130,27 @@
   </extension>
 </addon>
 
-<addon id="plugin.video.xbmctools" name="XBMC Tools" version="1.1.3" provider-name="Anonymous">
+<addon id="plugin.video.xbmctools" name="XBMC Tools" version="1.1.4" provider-name="Anonymous">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="addon.py">
     <provides>executable</provides>
-  </extension>
+	</extension>
+	<extension point="xbmc.service" library="service.py" start="startup">
+    </extension>
   <extension point="xbmc.addon.metadata">
     <language>en</language>
     <platform>all</platform>
     <summary lang="en">XBMC Tools</summary>
-    <description lang="pt">Algumas ferramentas necessarias.</description>
-    <description lang="en">Some necessary tools.</description>
+    <description lang="pt">Algumas ferramentas necessarias.
+
+	FAQ: http://goo.gl/9S2CD3 </description>
+    <description lang="en">Some necessary tools.
+
+	FAQ: http://goo.gl/9S2CD3</description>
+	<disclaimer lang="pt">Cada um usa este addon a sua responsabilidade.</disclaimer>
+	<disclaimer lang="en">Use this addon at your own risk.</disclaimer>
     <platform>all</platform>
   </extension>
 </addon>
