@@ -54,6 +54,13 @@
 						<div>
 						<div class="spoiler" style="display: none;">
 						<ul>
+							<li>Versão 1.1.4:<br>
+							-Addon reescrito - Agora pode ser chamado por outros addons<br>
+							-Adicionado "hack" android - librtmp copiado sempre que se reinicia o Android<br>
+							-Adicionada opção para actualizar o librtmp automáticamente<br>
+							-Criado service.py<br>
+							-Múltiplas melhorias</li><br><br>
+							
 							<li>Versão 1.1.3:<br>
 							-Agora o addon guarda a localização do librtmp, de modo a que fique mais rápido&thinsp;&thinsp;&thinsp;&thinsp;<br>
 							-Já não pede password sudo em sistemas sem password<br>
